@@ -20,7 +20,32 @@ type alias Request =
 
 
 type Response
-    = Success { space : Mensam.Space.SpaceView }
+    = Success
+        { id : Mensam.Space.Identifier
+        , name : Mensam.Space.Name
+        , roles :
+            List
+                { accessibility : Mensam.Space.Role.Accessibility
+                , id : Mensam.Space.Role.Identifier
+                , name : Mensam.Space.Role.Name
+                , permissions : Mensam.Space.Role.Permissions
+                }
+        , users :
+            List
+                { user : Mensam.User.Identifier
+                , role : Mensam.Space.Role.Identifier
+                }
+        , timezone : Mensam.Time.TimezoneIdentifier
+        , visibility : Mensam.Space.Visibility
+        , owner : Mensam.User.Identifier
+        , yourRole :
+            Maybe
+                { accessibility : Mensam.Space.Role.Accessibility
+                , id : Mensam.Space.Role.Identifier
+                , name : Mensam.Space.Role.Name
+                , permissions : Mensam.Space.Role.Permissions
+                }
+        }
     | ErrorInsufficientPermission Mensam.Space.Role.Permission
     | ErrorBody String
     | ErrorAuth Mensam.Auth.Bearer.Error
@@ -111,89 +136,112 @@ encodeBody body =
         ]
 
 
-decodeBody200 : Decode.Decoder { space : Mensam.Space.SpaceView }
+decodeBody200 :
+    Decode.Decoder
+        { id : Mensam.Space.Identifier
+        , name : Mensam.Space.Name
+        , roles :
+            List
+                { accessibility : Mensam.Space.Role.Accessibility
+                , id : Mensam.Space.Role.Identifier
+                , name : Mensam.Space.Role.Name
+                , permissions : Mensam.Space.Role.Permissions
+                }
+        , users :
+            List
+                { user : Mensam.User.Identifier
+                , role : Mensam.Space.Role.Identifier
+                }
+        , timezone : Mensam.Time.TimezoneIdentifier
+        , visibility : Mensam.Space.Visibility
+        , owner : Mensam.User.Identifier
+        , yourRole :
+            Maybe
+                { accessibility : Mensam.Space.Role.Accessibility
+                , id : Mensam.Space.Role.Identifier
+                , name : Mensam.Space.Role.Name
+                , permissions : Mensam.Space.Role.Permissions
+                }
+        }
 decodeBody200 =
-    Decode.map (\spaceView -> { space = spaceView }) <|
-        Decode.field "space" <|
-            Decode.andThen
-                (\record ->
-                    case record.yourRole of
-                        Nothing ->
-                            Decode.fail "`your-role` does not refer to any known role"
+    Decode.andThen
+        (\record ->
+            case record.yourRole of
+                Nothing ->
+                    Decode.fail "`your-role` does not refer to any known role"
 
-                        Just yourRole ->
-                            Decode.succeed <|
-                                Mensam.Space.MkSpaceView
-                                    { id = record.id
-                                    , name = record.name
-                                    , roles = record.roles
-                                    , users = record.users
-                                    , timezone = record.timezone
-                                    , visibility = record.visibility
-                                    , owner = record.owner
-                                    , yourRole = yourRole
-                                    }
-                )
-            <|
-                Decode.map8
-                    (\id name roles users timezone visibility owner maybeYourRoleId ->
-                        { id = id
-                        , name = name
-                        , roles = roles
-                        , users = users
-                        , timezone = timezone
-                        , visibility = visibility
-                        , owner = owner
-                        , yourRole =
-                            case maybeYourRoleId of
+                Just yourRole ->
+                    Decode.succeed <|
+                        { id = record.id
+                        , name = record.name
+                        , roles = record.roles
+                        , users = record.users
+                        , timezone = record.timezone
+                        , visibility = record.visibility
+                        , owner = record.owner
+                        , yourRole = yourRole
+                        }
+        )
+    <|
+        Decode.map8
+            (\id name roles users timezone visibility owner maybeYourRoleId ->
+                { id = id
+                , name = name
+                , roles = roles
+                , users = users
+                , timezone = timezone
+                , visibility = visibility
+                , owner = owner
+                , yourRole =
+                    case maybeYourRoleId of
+                        Nothing ->
+                            Just Nothing
+
+                        Just yourRoleId ->
+                            let
+                                unIdentifierRole (Mensam.Space.Role.MkIdentifier roleId) =
+                                    roleId
+                            in
+                            case Dict.get (unIdentifierRole yourRoleId) <| Dict.fromList <| List.map (\role -> ( unIdentifierRole role.id, role )) roles of
                                 Nothing ->
                                     Just Nothing
 
-                                Just yourRoleId ->
-                                    let
-                                        unIdentifierRole (Mensam.Space.Role.MkIdentifier roleId) =
-                                            roleId
-                                    in
-                                    case Dict.get (unIdentifierRole yourRoleId) <| Dict.fromList <| List.map (\role -> ( unIdentifierRole role.id, role )) roles of
-                                        Nothing ->
-                                            Just Nothing
-
-                                        Just role ->
-                                            Just <| Just role
-                        }
-                    )
-                    (Decode.field "id" Mensam.Space.identifierDecoder)
-                    (Decode.field "name" Mensam.Space.nameDecoder)
-                    (Decode.field "roles" <|
-                        Decode.list <|
-                            Decode.map4
-                                (\accessibility id name permissions ->
-                                    { accessibility = accessibility
-                                    , id = id
-                                    , name = name
-                                    , permissions = permissions
-                                    }
-                                )
-                                (Decode.field "accessibility" Mensam.Space.Role.accessibilityDecoder)
-                                (Decode.field "id" Mensam.Space.Role.identifierDecoder)
-                                (Decode.field "name" Mensam.Space.Role.nameDecoder)
-                                (Decode.field "permissions" <| Mensam.Space.Role.permissionsDecoder)
-                    )
-                    (Decode.field "users" <|
-                        Decode.list <|
-                            Decode.map2
-                                (\user role ->
-                                    { user = user
-                                    , role = role
-                                    }
-                                )
-                                (Decode.field "user" Mensam.User.identifierDecoder)
-                                (Decode.field "role" Mensam.Space.Role.identifierDecoder)
-                    )
-                    (Decode.field "timezone" Mensam.Time.timezoneIdentifierDecoder)
-                    (Decode.field "visibility" Mensam.Space.visibilityDecoder)
-                    (Decode.field "owner" Mensam.User.identifierDecoder)
-                    (Decode.field "your-role" <| Decode.nullable Mensam.Space.Role.identifierDecoder)
+                                Just role ->
+                                    Just <| Just role
+                }
+            )
+            (Decode.field "id" Mensam.Space.identifierDecoder)
+            (Decode.field "name" Mensam.Space.nameDecoder)
+            (Decode.field "roles" <|
+                Decode.list <|
+                    Decode.map4
+                        (\accessibility id name permissions ->
+                            { accessibility = accessibility
+                            , id = id
+                            , name = name
+                            , permissions = permissions
+                            }
+                        )
+                        (Decode.field "accessibility" Mensam.Space.Role.accessibilityDecoder)
+                        (Decode.field "id" Mensam.Space.Role.identifierDecoder)
+                        (Decode.field "name" Mensam.Space.Role.nameDecoder)
+                        (Decode.field "permissions" <| Mensam.Space.Role.permissionsDecoder)
+            )
+            (Decode.field "users" <|
+                Decode.list <|
+                    Decode.map2
+                        (\user role ->
+                            { user = user
+                            , role = role
+                            }
+                        )
+                        (Decode.field "user" Mensam.User.identifierDecoder)
+                        (Decode.field "role" Mensam.Space.Role.identifierDecoder)
+            )
+            (Decode.field "timezone" Mensam.Time.timezoneIdentifierDecoder)
+            (Decode.field "visibility" Mensam.Space.visibilityDecoder)
+            (Decode.field "owner" Mensam.User.identifierDecoder)
+            (Decode.field "your-role" <| Decode.nullable Mensam.Space.Role.identifierDecoder)
 
 
 decodeBody400 : Decode.Decoder String
