@@ -191,7 +191,26 @@ type Message
 
 
 type MessagePure
-    = SetSpaceInfo Mensam.Space.SpaceView
+    = SetSpaceInfo
+        { id : Mensam.Space.Identifier
+        , name : Mensam.Space.Name
+        , roles :
+            List
+                { accessibility : Mensam.Space.Role.Accessibility
+                , id : Mensam.Space.Role.Identifier
+                , name : Mensam.Space.Role.Name
+                , permissions : Mensam.Space.Role.Permissions
+                }
+        , timezone : Mensam.Time.TimezoneIdentifier
+        , visibility : Mensam.Space.Visibility
+        , yourRole :
+            Maybe
+                { accessibility : Mensam.Space.Role.Accessibility
+                , id : Mensam.Space.Role.Identifier
+                , name : Mensam.Space.Role.Name
+                , permissions : Mensam.Space.Role.Permissions
+                }
+        }
     | SetRoleToJoin Mensam.Space.Role.Identifier
     | EnterSpacePasswordToJoin (Maybe String)
     | ClosePopup
@@ -200,10 +219,10 @@ type MessagePure
 updatePure : MessagePure -> Model -> Model
 updatePure message model =
     case message of
-        SetSpaceInfo (Mensam.Space.MkSpaceView space) ->
+        SetSpaceInfo view ->
             { model
-                | spaceId = space.id
-                , spaceName = space.name
+                | spaceId = view.id
+                , spaceName = view.name
                 , roles =
                     List.filter
                         (\role ->
@@ -217,10 +236,10 @@ updatePure message model =
                                 Mensam.Space.Role.MkAccessibilityInaccessible ->
                                     False
                         )
-                        space.roles
-                , timezoneIdentifier = space.timezone
-                , visibility = space.visibility
-                , yourRole = space.yourRole
+                        view.roles
+                , timezoneIdentifier = view.timezone
+                , visibility = view.visibility
+                , yourRole = view.yourRole
             }
 
         SetRoleToJoin roleId ->
@@ -262,14 +281,18 @@ spaceView jwt model =
     Mensam.Api.SpaceView.request { jwt = jwt, id = model.spaceId } <|
         \result ->
             case result of
-                Ok (Mensam.Api.SpaceView.Success value) ->
-                    let
-                        (Mensam.Space.MkSpaceView spaceview) =
-                            value.space
-                    in
-                    case spaceview.yourRole of
+                Ok (Mensam.Api.SpaceView.Success view) ->
+                    case view.yourRole of
                         Nothing ->
-                            MessagePure <| SetSpaceInfo value.space
+                            MessagePure <|
+                                SetSpaceInfo
+                                    { id = view.id
+                                    , name = view.name
+                                    , roles = view.roles
+                                    , timezone = view.timezone
+                                    , visibility = view.visibility
+                                    , yourRole = view.yourRole
+                                    }
 
                         Just _ ->
                             MessageEffect JoinedSuccessfully
