@@ -653,11 +653,7 @@ spaceView jwt id =
     Mensam.Api.SpaceView.request { jwt = jwt, id = id } <|
         \result ->
             case result of
-                Ok (Mensam.Api.SpaceView.Success value) ->
-                    let
-                        (Mensam.Space.MkSpaceView view) =
-                            value.space
-                    in
+                Ok (Mensam.Api.SpaceView.Success view) ->
                     Messages <|
                         [ MessagePure <| SetUserIds view.users
                         , MessagePure <| SetRoles view.roles
